# PawanRandeepa12

./: README.ino  README.md
docs/: 00-executive-summary.md  01-market-analysis.md  02-competitive-landscape.md  03-product-vision.md  04-architecture.md  05-competitive-moat.md  06-roadmap.md  07-pricing-gtm.md  08-tech-stack.md
unified-ai-api-platform/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
unified-ai-api-platform/app/: __init__.py  config.py  main.py
unified-ai-api-platform/app/api/: deps.py
unified-ai-api-platform/app/api/routes/: admin.py  chat.py  cost.py  health.py  models.py  routing.py
unified-ai-api-platform/app/core/: exceptions.py  logging.py  middleware.py  security.py  tokens.py
unified-ai-api-platform/app/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  mock.py  openai_provider.py  registry.py
unified-ai-api-platform/app/schemas/: chat.py  common.py  cost.py
unified-ai-api-platform/app/services/: gateway.py
unified-ai-api-platform/app/services/cost/: __init__.py  analytics.py  budgets.py  pricing.py  tracker.py
unified-ai-api-platform/app/services/performance/: __init__.py  cache.py  metrics.py  queue.py  rate_limit.py
unified-ai-api-platform/app/services/routing/: __init__.py  health.py  latency.py  router.py
unified-ai-api-platform/config/: pricing.json
unified-ai-api-platform/examples/: demo.py
unified-ai-api-platform/tests/: conftest.py  test_cost.py  test_foundation.py  test_performance.py  test_routing.py
website/: README.md  (+1 more)
(+5 files in other folders)
